--- a/Avance 2 - Proyecto.Rmd
+++ b/Avance 2 - Proyecto.Rmd
@@ -16,8 +16,6 @@ header-includes:
 knitr::opts_chunk$set(echo = FALSE)
 
 #Instalación de las libreriás requeridas
-library(summarytools)
-library(pander)
 library(ggplot2)
 library(dplyr)
 library(GGally)
@@ -48,9 +46,9 @@ AI_index_db <- read_csv("AI_index_db.csv")
 
 datos <- data.frame(AI_index_db)
 
-numFrame <-data.frame(datos $Talent, datos $Infrastructure, datos $Operating.Environment, datos $Research, datos $Development, datos $Government.Strategy, datos $Commercial, datos $Total.score)
+num <- data.frame(datos $Talent, datos $Infrastructure, datos $Operating.Environment, datos $Research, datos $Development, datos $Government.Strategy, datos $Commercial, datos $Total.score)
 
-select <- data.frame(datos $Commercial, datos $Talent, datos $Research, datos $Income.group, datos $Region, datos $Total.score)
+numeric_data <- data.frame(Commercial = datos$Commercial, Research = datos$Research, Talent = datos$Talent, Total_Score = datos$Total.score)
 ```
 
 \section{Métodos}
@@ -85,7 +83,8 @@ variables <- data.frame(
 # Ajuste del diseño de la tabla
 cat("\\renewcommand{\\arraystretch}{1.5}\n")
 cat("\\begin{footnotesize}")
-knitr::kable(variables, caption = "Variables y su clasificación", 
+knitr::kable(variables, 
+             caption = "Variables y su clasificación", 
              format = "latex", 
              booktabs = TRUE, 
              longtable = TRUE,
@@ -93,6 +92,7 @@ knitr::kable(variables, caption = "Variables y su clasificación",
              align = c("l", "l", "l", "p{8cm}"))
 cat("\\end{footnotesize}")
 cat("\\renewcommand{\\arraystretch}{1}\n")
+
 ```
 
 \begin{multicols}{2}
@@ -101,9 +101,8 @@ cat("\\renewcommand{\\arraystretch}{1}\n")
 Posteriormente, con el propósito de indentificar las posibles variables con un mayor grado de influencia en el nivel de inversión, innovación e implementación de la inteligencia artificial, se elaboró la figura 1, la cuál presenta una comparación de las distribuciones de las variables y sus respectivos coeficientes de correlación lineal de Pearson con el fin de reconocer los índices que presentan un mayor valor respecto al AI Global Index (Total Score), los cuáles fueron Commerce para el nivel de inversión, Research para la innovación y Talent para la implemetación. 
 
 
-
 ```{r figura1, echo=FALSE}
-figura1 <- ggpairs(numFrame, lower = list(continuous = "smooth"))
+figura1 <- ggpairs(num, lower = list(continuous = "smooth"))
 ggsave("figura1.png", plot = figura1, width = 7, height = 7, dpi = 300)
 ```
 
@@ -112,69 +111,89 @@ ggsave("figura1.png", plot = figura1, width = 7, height = 7, dpi = 300)
 \end{center}
 Figura 1. Correlación lineal de Pearson índices.
 
-\section{Resultados}
-A continuación en la Tabla 2 se presentan las medidas de tendencia central, posición y disperción de las variables cuantitativas Índice Commerce, Research y Talent.
+Posteriormente, se realizó ... 
+... para cada uno de los índices con el fin de ...
 
+\section{Resultados}
+En la Tabla 2 se presentan las medidas de tendencia central, posición, disperción, covarianza y correlación lineal de Pearson con respecto al Total Score (AI Global Index) de las variables cuantitativas Índice Commerce, Research y Talent. 
+
+Todos los índices tienen un mínimo de 0 y un máximo de 100, por lo tanto, todos los rangos son también de 100, lo cuál no brinda mucha información acerca de la distribución de los datos, sin embargo facilita la comparación entre las estadísticas de las diferentes variables. El índice Commerce tiene la media más baja con 6.172, Talent y Research una media similiar al rededor de 16 y Total Score la mayor media con 23.915, sin embargo en todos los casos los datos son altamente heterogéneos, considerando que el coeficiente de variación de todas las variables es mayor al 50%, e incluso, para el caso de Commerce este supera el 100%. Para los índices con menos de tres modas se identifica que estas están alejadas de la media, y lo mismo sucede con la mediana, lo cuál es un indicador de que los índices no se distribuyen de normalmente. 
+
+En el caso de la covarianza, esta es positiva para todas las variables, lo cuál plantea la posibilidad de que estas tengan una relación lineal directa con el índice Total Score. Esto es confirmado con el coeficiente de correlación de Pearson, donde un valor superior a 0.8 indica hay una relación muy significativa, lo cuál es cierto para todos los casos, donde la variable Research presenta el indicador más alto con un coeficiente de 0.946.
+
+\end{multicols}
 
 ```{r resultados, echo=FALSE, results='asis'}
 
-numeric_data <- data.frame(
-  Commercial = datos$Commercial,
-  Talent = datos$Talent,
-  Research = datos$Research,
-  Total_Score = datos$Total.score
-)
-
-custom_stats <- function(x) {
+# Cálculo de las estadísticas
+custom_stats <- function(x, total_score = NULL) {
   x <- x[!is.na(x)]
   n <- length(x)
-  mean_val <- mean(x)
-  std_dev <- sd(x)
-  min_val <- min(x)
-  max_val <- max(x)
-  range_val <- max_val - min_val
-  q1 <- quantile(x, 0.25)
-  median_val <- median(x)
-  q3 <- quantile(x, 0.75)
-  iqr <- q3 - q1
-  cv <- (std_dev / mean_val) * 100  
+  mean_val <- round(mean(x), 3)
   
+  # Cálculo de la moda
+  freq_table <- table(x)
+  mode_val <- as.numeric(names(freq_table)[freq_table == max(freq_table)])
+  if (length(mode_val) > 3) {
+    mode_text <- "> 3 modas"
+  } else {
+    mode_text <- paste(round(mode_val, 3), collapse = ", ")
+  }
+  std_dev <- round(sd(x), 3)
+  min_val <- round(min(x), 3)
+  q1 <- round(quantile(x, 0.25), 3)
+  median_val <- round(median(x), 3)
+  q3 <- round(quantile(x, 0.75), 3)
+  max_val <- round(max(x), 3)
+  range_val <- round(max_val - min_val, 3)
+  iqr <- round(q3 - q1, 3)
+  cv <- round((std_dev / mean_val) * 100, 3)
+  cov_val <- if (!is.null(total_score)) round(cov(x, total_score, use = "complete.obs"), 3) else NA
+  cor_val <- if (!is.null(total_score)) round(cor(x, total_score, use = "complete.obs"), 3) else NA
+
   stats_df <- data.frame(
-    Statistic = c("Media", "dev.std", "Rango", "Min", "Q1", "Mediana", "Q3", "Max", "RIQ", "CV"),
-    Value = c(mean_val, std_dev, range_val, min_val, q1, median_val, q3, max_val, iqr, cv)
+    Statistic = c("Media", "Moda", "Desviación estándar", "Mínimo", "Q1", "Mediana", "Q3", "Máximo", "Rango", "IQR", "CV", "Covarianza - Total Score", "Correlación lineal - Total Score"),
+    Value = c(mean_val, mode_text, std_dev, min_val, q1, median_val, q3, max_val, range_val, iqr, cv, cov_val, cor_val),
+    row.names = NULL
   )
-  
   return(stats_df)
 }
 
-commercial_stats <- custom_stats(numeric_data$Commercial)
-talent_stats <- custom_stats(numeric_data$Talent)
-research_stats <- custom_stats(numeric_data$Research)
+commercial_stats <- custom_stats(numeric_data$Commercial, numeric_data$Total_Score)
+talent_stats <- custom_stats(numeric_data$Talent, numeric_data$Total_Score)
+research_stats <- custom_stats(numeric_data$Research, numeric_data$Total_Score)
 total_score_stats <- custom_stats(numeric_data$Total_Score)
 
 stats_df <- data.frame(
-  Statistic = commercial_stats$Statistic,
-  Commercial = commercial_stats$Value,
-  Talent = talent_stats$Value,
-  Research = research_stats$Value,
-  Total_Score = total_score_stats$Value
+  Estadísticas = commercial_stats$Statistic,
+  Índice_Commerce = commercial_stats$Value,
+  Índice_Talent = talent_stats$Value,
+  Índice_Research = research_stats$Value,
+  Índice_Total_Score = total_score_stats$Value
 )
 
-# Ajustar el formato
 rownames(stats_df) <- stats_df$Statistic
 stats_df$Statistic <- NULL
 
+
+#Ajuste del diseño de la tabla
 cat("\\renewcommand{\\arraystretch}{1.5}\n")
 cat("\\begin{footnotesize}")
-knitr::kable(stats_df, caption = "Estadísticas descriptivas por índice", 
+knitr::kable(stats_df, caption = "Estadísticas descriptivas por variable",
              format = "latex", 
              booktabs = TRUE,
+             longtable = TRUE,
              digits = 2)
 cat("\\end{footnotesize}")
 cat("\\renewcommand{\\arraystretch}{1}\n")
+
 ```
 
-tabla de frecuencia univariada
+\begin{multicols}{2}
+
+Para otener una perspectiva más amplia de la distribución de los datos, en la Tabla 3 se presentan las frecuencias univariadas de las variables cuantitativas Índice Commerce, Research y Talent. 
+
+...
 
 \subsection{Índice Commerce}
 tabla de frecuencia bivariada (indice vs total socore)
@@ -183,17 +202,14 @@ histograma
 ojiva
 diagrama de cajas y bigotes
 
-
-\subsection{Índice Talent}
+\subsection{Índice Research}
 tabla de frecuencia bivariada (indice vs total socore)
-tabla con covarianza y coeficiente de correlacion de pearson
 histograma
 ojiva
 diagrama de cajas y bigotes
 
-\subsection{Índice Research}
+\subsection{Índice Talent}
 tabla de frecuencia bivariada (indice vs total socore)
-tabla con covarianza y coeficiente de correlacion de pearson
 histograma
 ojiva
 diagrama de cajas y bigotes
@@ -207,4 +223,5 @@ diagrama de torta
 
 \section{Conclusiones}
 \section{Referencias}
+
 \end{multicols}
