--- a/avance2-proyecto.tex
+++ b/avance2-proyecto.tex
@@ -292,7 +292,12 @@ Total & 9 & 17 & 18 & 14 & 2 & 0 & 1 & 0 & 0 & 1 & 62\\
 
 \begin{multicols}{2}
 
-El histograma permite plasmar gráficamente la distribución de los datos de una variable. En la figura 2 se presenta
+El histograma presentado en la Figura 2 permite plasmar gráficamente la distribución de los datos de la variable índince Commerce. Su puede observar como en los casos de Americas, Asia-Pacific y Middle East los datos se encuentran concentrados hacia la izquierda del eje x, sin embargo presentan una asimetría positiva o sesgo a la derecha, donde la media es mayor a la mediana, indicando que posiblemente se presenten puntos atípicos hacia la derecha del eje x.
+
+En el caso de Europe, se observa que los datos se agrupan hacia la izquierda del eje x, sin embarrgo, aunque en el análisis de la Tabla 2 se teorizaba una posible distribución normal debido a la cercanía de la media, mediana y moda, no se muestra simetría en la gráfica,ya que esta muestra una distribución con mayor similitud a una exponencial.
+
+En el caso de Africa, los datos se encuentran concentrados alrededor del 0
+
 
 
 
@@ -302,7 +307,7 @@ El histograma permite plasmar gráficamente la distribución de los datos de una
 Figura 2. Distribución del Índice Commerce agrupado por Región.
 
 
-La Ojiva en la Figura 3 presenta la distriución acumulada de los datos de manera porcental, lo cuál permite estimar los percentiles correspondientes
+La Ojiva en la Figura 3 presenta la distriución acumulada de los datos de manera porcental, lo cuál permite estimar los percentiles correspondientes a los diferentes puntajes del índice Commerce
 
 
 
@@ -322,15 +327,11 @@ El diagrama de cajas y bigotes presentado en la figura 4
 Figura 4. Distribución de las medidas de posición del Índice Commerce agrupado por Región.
 
 
-
-
-
 \subsection{Índice Research}
 tabla de frecuencia bivariada (indice vs total socore)
 histograma x region
 ojiva x region
 diagrama de cajas y bigotes x region
-prueba de independencia
 
 
 \subsection{Índice Talent}
@@ -338,7 +339,6 @@ tabla de frecuencia bivariada (indice vs total socore)
 histograma x region
 ojiva x region
 diagrama de cajas y bigotes x region
-prueba de independencia x region
 
 \subsection{Región}
 tabla de frecuencia univariada de los índices discriminados por región
